updateItem functionality partially working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="item-store container mx-auto px-4-md mt-3" id="itemStore" >
             <!-- <li class="todo-item d-flex mx-auto " >
                 <div class="check-mark my-auto">
-                    <img src="./assets/check.png" alt="check icon" >
+                    <img src="./assets/check.png" alt="check icon"  id="check-img" >
                 </div>
                 <p class="todo-detail my-auto">
                     Learn JS
